--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 
 </head>
 <body>
-    <h1 class="text-center">Non Profit</h1>
+	<div class="container">
+		<h1>Student Bio</h1>
+		<h3>Tammy Le</h3>
+		<img src="assets/images/profilePicture.jpeg" alt="" style="width: 200px; height:200px">
+		<ul>
+			<li><a href="mailto: tle@yahoo.com">tle@yahoo.com</a></li>
+			<li><a href="https://github.com/lephillips" target="_blank">Github</a></li>
+			<li><a href="lephillips.github.io">Portfolip</a></li>
+		</ul>
+	</div>
+
 </body>
 </html>
